--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,8 @@
     </div>
     <div class="container">
         <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
-        <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
+        <!-- <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div> -->
+		<div class="heading-title color002" id="home" style="font-size:50px;"><b>MY BLOG</b></div>
 		<!-- <img class="imginvert disappear" style="position:absolute; right:400px; padding-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png"> z-index:-1; -->
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
         <!-- <p style="font-size: 22px"> -->
@@ -200,9 +201,14 @@
 
         <p class="heading" id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
         <div class="container2">
+		    <div class="gallery" style="width:300px;">
+                <img class="image" id="img005" src="images/retreat-eagle-school-semarang-2023.jpg">
+                <div class="desc" id="img005d">Gambar 5: Retreat Eagle School Semarang 2023 - Thumbnail Youtube</div>
+            </div>
+			<div class="clearfix"></div>
             <p>
             <!-- <span style="font-size:22px; color:#000080;"><b>Kamis, 8 Sep 2023</b></span> -->
-            <b class="color004" style="font-size:23px;">Kamis, 8 Sep 2023</b>
+            <span style="font-size:23px;"><span class="color004"><b>Hari pertama</b></span> ~ <span class="color009"><b>Kamis, 8 September 2023</b></span></span>
             <br><br>
             <!-- <b style="color:#200040">Berangkat ke Lembah Kemenangan</b><br> -->
             <b>Berangkat ke Lembah Kemenangan</b><br>
@@ -219,8 +225,8 @@
             <br><br>
             <b>SESI 3 ~ <span class="color006">19:15-22:00</span></b><br>
             Pada sesi ketiga, ada ibadah bersama Sr. Ditus, tentang kekudusan, juga ada sesi tanya jawab (Q&A). Dan kegiatan terakhir hari ini adalah latihan yel-yel dengan tema Be Excellent jam 10 malam, karena banyak siswa yang melanggar tata tertib, maka C. Gaby dan C. Agus S marah dan menegurnya, seperti membersihkan meja makan. Di malam hari akhirnya melihat penampilan kelompok yel-yel dekat api unggun karena abis latihan. Baru tidur di kamar Graha Gita sekiar tengah malam atau jam 12 malam, sempat main hp dan menunjukkan ke Gilbert.
-            <br><br>
-            <span class="color004" style="font-size:23px;"><b>Jumat, 9 Sep 2023</b></span>
+            <br><br><br>
+            <span style="font-size:23px;"><span class="color004"><b>Hari kedua</b></span> ~ <span class="color009"><b>Jumat, 9 September 2023</b></span></span>
             <br><br>
             <b>Kegiatan Outbound</b><br>
             Di pagi hari yaitu jam setengah 6 pagi (05:30), kita akan pergi ke ruang aula untuk beribadah, dan lalu sarapan. Habis itu, ada beberapa kegiatan outbound yang menarik, sama Daniel T pada kelompok yel-yel yang sama. Yang pertama bermain bola dan pipa, agar pipa ga bocor, maka dipegang. Selanjutnya, memasukkan bola ke dalam lubangnya, dengan pegangan orang-orang dari kelompok, dan ada permainan melompat di lingkaran.
@@ -229,51 +235,63 @@
             Setelah itu, baru mandi dan sarapan makan nasi goreng. Baru melihat pengumuman dari hasil kegiatan permainan outbound dengan banyak hadiah sebelum pulang. Lalu pulangnya naik bis dan kembali ke sekolah Eagle School.
             </p>
             <br>
+			Link video Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/watch?v=fKfZS13IggU">Retreat Eagle School Semarang 2023</a><br>
+            Link channel Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/@EagleSchoolSemarang">Eagle School Semarang</a><br>
+			Link Instagram <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.instagram.com/eagleschool_/">Eagle School Semarang</a>
+            <br><br>
         </div>
 
         <p class="heading" id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
         <div class="container2">            
-            <p>
-            Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali.
-            </p>
-            <div class="gallery" style="width:300px;">
-                <img class="image" id="img005" src="images/IMG_4550.JPG">
-                <div class="desc" id="img005d">Gambar 5: Foto Denpasar, Bali</div>
-            </div>
-            <div class="gallery" style="width:300px;">
-                <img class="image" id="img006" src="images/IMG_4617.JPG">
-                <div class="desc" id="img006d">Gambar 6: Foto Denpasar, Bali 2</div>
-            </div>
-			<div class="gallery" style="width:300px;">
-                <img class="image" id="img007" src="images/IMG_4714.JPG">
-                <div class="desc" id="img007d">Gambar 7: Pantai Pandawa</div>
-            </div>
-			<div class="gallery" style="width:300px;">
-                <img class="image" id="img008" src="images/IMG_4872.JPG">
-                <div class="desc" id="img008d">Gambar 8: Tanah Lot</div>
-            </div>
-			<div class="clearfix"></div>
-            <!-- <p> -->
-            <br>
+            Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali, tepatnya dari tanggal 24-27 Juni 2017, dimana dilakukan selama Libur Lebaran 2017.
+			<br><br>
             <span style="font-size:23px;"><span class="color004"><b>Hari pertama</b></span> ~ <span class="color009"><b>Sabtu, 24 Juni 2017</b></span></span>
-            <br><br>
+			<br><br>
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img006" src="images/IMG_4550.JPG">
+                <div class="desc" id="img006d">Gambar 6: Foto Denpasar, Bali</div>
+            </div>
+            <div class="gallery" style="width:300px;">
+                <img class="image" id="img007" src="images/IMG_4617.JPG">
+                <div class="desc" id="img007d">Gambar 7: Foto Denpasar, Bali 2</div>
+            </div>
+			<div class="clearfix"></div><br>
+            <!-- <p> -->
             <!-- <span style="color:red">* Untuk sementara ini, foto ini diblur terlebih dahulu.</span><br><br> -->
             Pada hari Sabtu, keluarga saya berangkat dulu dari Semarang ke Jogja naik mobil. Lalu ke bandara Adi Sucipto dengan kondisi yang rame-rame karena libur Lebaran, lalu naik pesawat selama 2 jam dari Jogja ke Bali.
-			Akhirnya kita sampai ke Pulau Bali, tepatnya di <div class="tooltip">Kota Denpasar<span class="tooltiptext" id="desc003"></span></div> dengan kondisi yang selamat meskipun kondisinya ramai. Setelah itu, baru makan outdoor di dekat pantai, sebelum kita pesan hotel dan sempat foto-foto pemandangan di Bali (Gambar 5, 6).
-            <!-- Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel. Lalu besoknya ke Pantai Kuta, dan kita naik kapal kecil ...<br> -->
-            <!-- [Under Construction] -->
+			Akhirnya kita sampai ke Pulau Bali, tepatnya di <div class="tooltip">Kota Denpasar<span class="tooltiptext" id="desc003"></span></div> dengan kondisi yang selamat meskipun kondisinya ramai.
+			Setelah itu, baru makan outdoor di dekat pantai, sebelum kita pesan hotel dan sempat foto-foto pemandangan di Bali. <span class="color011">(Gambar 6, 7)</span>
+			Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel.
             <br><br><br>
             <span style="font-size:23px;"><span class="color004"><b>Hari kedua</b></span> ~ <span class="color009"><b>Minggu, 25 Juni 2017</b></span></span>
             <br><br>
-            Hari kedua di Bali, yaitu hari Minggu. Cucu-cucu dari keluarga saya berenang di sebuah hotel dan aku sempat sarapan. Setelah itu, di sore hari, kita ke Pantai Pandawa untuk melihat sunset yang indah. (Gambar 7)
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img008" src="images/IMG_4714.JPG">
+                <div class="desc" id="img008d">Gambar 8: Pantai Pandawa</div>
+            </div>
+			<div class="clearfix"></div><br>
+            Hari kedua di Bali, yaitu hari Minggu. Cucu-cucu dari keluarga saya berenang di sebuah hotel dan aku sempat sarapan.
+			Di siang hari, kita ke pantai Kuta untuk naik kapal kecil, dimana menjelajahi pemandangan di bawah laut.
+			Setelah itu, di sore hari, kita ke Pantai Pandawa untuk melihat sunset yang indah. <span class="color011">(Gambar 8)</span>
             <br><br><br>
             <span style="font-size:23px;"><span class="color004"><b>Hari ketiga</b></span> ~ <span class="color009"><b>Senin, 26 Juni 2017</b></span></span>
 			<br><br>
-			Hari ketiga di Bali, kita lanjut jalan-jalan lagi ke Wisata Monyet di Ubud. Setelah itu, di sore hari, kita pergi ke Tanah Lot, tempat wisata yang lumayan terkenal dan padat. (Gambar 8)
+			<div class="gallery" style="width:300px;">
+                <img class="image" id="img009" src="images/IMG_4872.JPG">
+                <div class="desc" id="img009d">Gambar 9: Tanah Lot</div>
+            </div>
+			<div class="clearfix"></div><br>
+			Hari ketiga di Bali, kita lanjut jalan-jalan lagi ke Wisata Monyet di Ubud. Setelah itu, di sore hari, kita pergi ke Tanah Lot, tempat wisata yang lumayan terkenal dan padat. <span class="color011">(Gambar 9)</span>
             <br><br><br>
-            <span style="font-size:23px;"><span class="color004"><b>Hari keempat</b></span> ~ <span class="color009"><b>Selasa, 27 Juni 2017</b></span></span>
+			<span style="font-size:23px;"><span class="color004"><b>Hari keempat</b></span> ~ <span class="color009"><b>Selasa, 27 Juni 2017</b></span></span>
 			<br><br>
-			Setelah 4 hari 3 malam di Bali, di hari terakhir di Bali, kita sempat foto sebentar di hotel, lalu pulang ke Jogja naik pesawat. Setelah itu baru balik lagi ke Semarang, dan keluarga Nainggolan lainnya juga pulang ke Jakarta.
+			<div class="gallery" style="width:180px;">
+                <img class="image" id="img010" src="images/IMG20170627134735.jpg">
+                <div class="desc" id="img010d">Gambar 10: Foto Pesawat</div>
+            </div>
+			<div class="clearfix"></div><br>
+			Setelah 4 hari 3 malam di Bali, di hari terakhir di Bali, kita sempat foto sebentar di hotel, lalu pulang ke Jogja naik pesawat. <span class="color011">(Gambar 10)</span>
+			Setelah itu baru balik lagi ke Semarang, dan keluarga Nainggolan lainnya juga pulang ke Jakarta.
             <br><br><br>
             <b>Catatan:</b><br>
             <!-- <ul><li> -->
@@ -285,15 +303,16 @@
         </div>
 
         <p class="heading" id="6" style="font-size: 25px"><b>6. Pemenang Karya Video Sekolah dari Hari Pendidikan Nasional</b></p>
-        <div class="container2">            
+        <div class="container2">
             <!-- <p>[Under Construction]</p><br> -->
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img009" src="images/juara-1-film-pendek-tingkat-kota-semarang.jpg">
-                <div class="desc" id="img009d">Gambar 9: Juara 1 Film Pendek Tingkat Kota Semarang 2024 - Thumbnail Youtube</div>
+                <img class="image" id="img011" src="images/juara-1-film-pendek-tingkat-kota-semarang.jpg">
+                <div class="desc" id="img011d">Gambar 11: Juara 1 Film Pendek Tingkat Kota Semarang 2024 - Thumbnail Youtube</div>
             </div>
 			<div class="clearfix"></div><br>
-            Link video di Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/watch?v=v1bll077CUE">Juara 1 Lomba Short Movie Competition 2024</a><br>
-            Link channel: <a class="link" href="https://www.youtube.com/@EagleSchoolSemarang">Eagle School Semarang</a>
+            Link video Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/watch?v=v1bll077CUE">Juara 1 Lomba Short Movie Competition 2024</a><br>
+            Link channel Youtube <img src="images/Youtube-Symbol-Vector.jpg" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.youtube.com/@EagleSchoolSemarang">Eagle School Semarang</a><br>
+			Link Instagram <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;">: <a class="link" href="https://www.instagram.com/eagleschool_/">Eagle School Semarang</a>
             <br><br><br>
         </div>
 
@@ -319,13 +338,13 @@
         <p class="heading" id="8" style="font-size: 25px"><b>8. Sejarah selama sekolah di Eagle School</b></p>
 		<div class="container2">            
             <!-- <p>[Under Construction]</p><br> -->
-			<div class="gallery" style="width:300px;">
-                <img class="image" id="img010" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img010d">Gambar 10</div>
+			<div class="gallery" style="width:200px;">
+                <img class="image" id="img012" src="images/Eagle School.jpg">
+                <div class="desc" id="img012d">Gambar 12: Logo Eagle School Semarang</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img011" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img011d">Gambar 11</div>
+                <img class="image" id="img013" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img013d">Gambar 13</div>
             </div>
 			<div class="clearfix"></div><br>
             Di kelas 7, Devan melanjutkan di sekolah PKBM Eagle School Semarang dengan fasilitas pelajaran dan talent yang lengkap.
@@ -334,16 +353,16 @@
             <br><br><br>
         </div>
 		
-        <p class="heading" id="9" style="font-size: 25px"><b>9. Holiday to Jakarta & Bandung</b></p>
+        <p class="heading" id="9" style="font-size: 25px"><b>9. Holiday to Jakarta & Bandung 2023</b></p>
 		<div class="container2">            
             <!-- <p>[Under Construction]</p><br> -->
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img012" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img012d">Gambar 12</div>
+                <img class="image" id="img014" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img014d">Gambar 14</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img013" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img013d">Gambar 13</div>
+                <img class="image" id="img015" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img015d">Gambar 15</div>
             </div>
 			<div class="clearfix"></div><br>
             <span class="color007">[Under Construction]</span>
@@ -355,12 +374,12 @@
 		<div class="container2">            
             <!-- <p>[Under Construction]</p><br> -->
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img014" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img014d">Gambar 14</div>
+                <img class="image" id="img016" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img016d">Gambar 16</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img015" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img015d">Gambar 15</div>
+                <img class="image" id="img017" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img017d">Gambar 17</div>
             </div>
 			<div class="clearfix"></div><br>
             <span class="color007">[Under Construction]</span>
@@ -381,21 +400,6 @@
             <a href="blog2.html">&gt;</a>
             <!-- <a href="#">&raquo;</a> -->
         </div><br><br>
-        <!-- <div class="box heading">
-            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
-            <div class="btn-group">
-                <a href="index.html">Home</a>
-                <a class="selected">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-                <a href="hasil-karya.html">Hasil Karya</a>
-                <a href="timeline.html">Timeline</a>
-                <a hred="updates.html">Updates</a>
-                <a href="projects.html">Projects</a>
-            </div>
-            <div class="clearfix"></div><br>
-        </div> -->
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
@@ -411,7 +415,7 @@
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 7 Mei 2024<br> -->
-		Terakhir diupdate: 14 Desember 2025<br>
+		Terakhir diupdate: 20 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
