--- a/blog3.html
+++ b/blog3.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="heading color002" id="home" style="font-size:50px;"><b>Blog dan Cerita</b></div>
+        <div class="heading-title color002" id="home" style="font-size:50px;"><b>MY BLOG</b></div>
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:250px; opacity:0.2; width:400px; rotate:10deg;" src="images/blog-icon.png">
         <p style="font-size:22px">
             <b class="heading" style="font-weight:700;">Halaman 3 dari 3</b>
@@ -69,7 +69,7 @@
     <script src="blog-description.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
-		Terakhir diupdate: 14 Desember 2025<br>
+		Terakhir diupdate: 20 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
