--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:0px; opacity:0.2; width:300px;" src="images/description-icon.png">
 		
         <p>
-        Ini adalah program yang sudah Devan kerjakan, jumlahnya ada 8.<br>
+        Ini adalah program yang sudah Devan Daniel kerjakan, jumlahnya ada 8.<br>
         Semuanya berkaitan dengan Matematika dan program tersebut Devan kerjakan selama 3 tahun, selama Devan SMP.<br>
         <br>
         Devan memakai bahasa pemrograman Python dalam mengerjakan semua program tersebut, beberapa diantarnya menggunakan Streamlit.<br>
@@ -266,9 +266,10 @@
     <footer style="background-color:#404040; padding:10px; color:white">
         <!-- <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;"> -->
 		<p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 16 Desember 2025<br>
-        <span id="version">Version: 1.9.5</span><br>
-        Copyright © 2025 by Devan
+        Terakhir diupdate: 20 Desember 2025<br>
+        <span id="version">Version: 1.10</span><br>
+		Website ini dibuat di Github<br><br>
+        <span style="color:#c0c0c0;">Copyright © 2023 - 2025 by Devan Daniel</span>
 		<!-- Terakhir diupdate: 30 Mei 2024<br>
         Version: 1.8.1<br>
         Copyright © 2024 by Devan -->
