--- a/projects.html
+++ b/projects.html
@@ -176,7 +176,10 @@
             <p>Tanggal Matematika</p>
             <a class="link" href="projects/Tanggal Matematika.html">Tanggal Matematika</a>
         </div><br>
+		
+		<br><br>
 
+        <!--
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 		
 		<hr style="height:2px; border-width:0; background-color:gray">
@@ -198,8 +201,8 @@
             <div class="clearfix"></div><br>
         </div>
         <br>
+		-->
         <a class="button heading" href="#home">Kembali ke awal</a>
-        <br><br>
     </div>
     <script src="script.js"></script>
     <!-- Terakhir diupdate: 24 Mei 2024<br> -->
@@ -207,10 +210,12 @@
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 13 Nov 2024<br> -->
         <!-- Terakhir diupdate: 14 Feb 2025<br> -->
-        Terakhir diupdate: 15 Desember 2025<br>
-        Copyright © 2025 by Devan
+        Terakhir diupdate: 20 Desember 2025<br>
+        Copyright © 2025 by Devan<br>
+		<!-- Situs ini telah dikunjungi <span id="visits">...</span> kali.</p> -->
         </p>
     </footer>
     <!-- <script src="script.js"></script> -->
+	<script>
 </body>
 </html>
