--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -30,7 +30,8 @@
 		<!-- <img class="imginvert disappear" style="position:absolute; right:400px; margin-top:100px; opacity:0.2; width:400px;" src="images/achievement-icon.png"> -->
 		<img class="imginvert disappear unselectable" style="position:absolute; right:200px; margin-top:100px; opacity:0.2; width:400px;" src="images/Achievement-icon-vector-02.svg">
         <p>
-        Hasil Karya berisi karya yang sudah dibuat selama ini, seperti koding dan menggambar.
+        <!-- Hasil Karya berisi karya yang sudah dibuat selama ini, seperti koding dan menggambar. -->
+		Kumpulan hasil karya yang saya kembangkan melalui matematika, pemrograman, dan seni visual. Website ini menjadi ruang untuk menunjukkan proses, pemikiran, dan kemampuan yang saya bangun.
         </p><br>
         <p class="heading color003" style="font-size:30px;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
@@ -201,7 +202,7 @@
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
         <!-- Terakhir diupdate: 16 Feb 2024<br> -->
         <!-- Terakhir diupdate: 6 Maret 2025<br> -->
-		Terakhir diupdate: 14 Desember 2025<br>
+		Terakhir diupdate: 24 Desember 2025<br>
         Copyright © 2025 by Devan
         </p>
     </footer>
