--- a/projects/Tes Kognitif dan Visual.html
+++ b/projects/Tes Kognitif dan Visual.html
@@ -308,7 +308,8 @@
 	<!-- <p>Terakhir diupdate: 13 November 2025</p> -->
 	<!-- <p>Terakhir diupdate: 1 Desember 2025</p> -->
 	<!-- <p>Terakhir diupdate: 24 Desember 2025</p> -->
-    <p>Terakhir diupdate: 14 Januari 2026</p>
+    <!-- <p>Terakhir diupdate: 14 Januari 2026</p> -->
+	<p>Terakhir diupdate: 23 Januari 2026</p>
 	
 	<script>
         // Time
@@ -1191,7 +1192,183 @@
                             pilihan_list.push(value);
                         }
                     }
-                }
+                } else if (e1_bentuk.index == 2) {
+					if (level2.index == 0) width = 450;
+					else if (level2.index == 1) width = 600;
+					else if (level2.index == 2) width = 750;
+					else width = 750;
+					soal_teks = `
+					<canvas id="myCanvas" width="${width}" height="360" style="background-color:#202020; border:1px solid gray;">
+					Sorry, your browser does not support canvas.
+					</canvas><br><br>
+					`;
+                    soal_teks += 'Garis terpanjang ada di nomor ...';
+                    document.getElementById('soal').innerHTML = soal_teks;
+                    const canvas = document.getElementById("myCanvas");
+                    const ctx = canvas.getContext("2d");
+                    ctx.beginPath();
+                    tinggi_list = [];
+                    if (level2.index == 0) {
+                        jumlah_garis = 6;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+                            if (i == 1) tinggi = Math.floor(30 + 10 * Math.random());
+                            else tinggi += Math.floor(10 + 10 * Math.random());
+                            tinggi_list.push(tinggi);
+                        }
+                        console.log(tinggi_list);
+                    } else if (level2.index == 1) {
+                        jumlah_garis = 8;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+                            if (i == 1) tinggi = Math.floor(40 + 20 * Math.random());
+                            else if (i <= jumlah_garis-1) tinggi += Math.floor(10 * Math.random());
+                            else tinggi += Math.floor(5 + 5 * Math.random());
+                            tinggi_list.push(tinggi);
+                        }
+                    } else if (level2.index == 2) {
+                        jumlah_garis = 10;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+                            if (i == 1) tinggi = Math.floor(40 + 20 * Math.random());
+                            else if (i <= jumlah_garis-1) tinggi += Math.floor(8 * Math.random());
+                            else tinggi += Math.floor(4 + 4 * Math.random());
+                            tinggi_list.push(tinggi);
+                        }
+                    } else {
+                        jumlah_garis = 10;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+                            if (i == 1) tinggi = Math.floor(50 + 30 * Math.random());
+                            else if (i <= jumlah_garis-1) tinggi += Math.floor(6 * Math.random());
+                            else tinggi += Math.floor(3 + 3 * Math.random());
+                            tinggi_list.push(tinggi);
+                        }
+                    }
+					ctx.font = "24px arial";
+                    tinggi_list = tinggi_list.sort(() => .5 - Math.random());
+                    tinggi_list = tinggi_list.slice(0,jumlah_garis);
+                    console.log(tinggi_list);
+                    hasil = 1+tinggi_list.indexOf(tinggi);
+                    ctx.fillStyle = "#404040";
+                    ctx.fillRect(0, 150, 750, 30);
+					ctx.fillRect(0, 330, 750, 30);
+                    ctx.textAlign = "center";
+					ctx.textBaseline = "middle";
+                    for (let i = 1; i <= jumlah_garis; i++) {
+						ctx.beginPath();
+						ctx.fillStyle = "white";
+						radian = Math.PI*Math.random();
+						ctx.moveTo(parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))+tinggi_list[i-1]/2*Math.cos(radian)),parseInt(75+180*parseInt((2*i-2)/jumlah_garis)+tinggi_list[i-1]/2*Math.sin(radian)));
+						ctx.lineTo(parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))-tinggi_list[i-1]/2*Math.cos(radian)),parseInt(75+180*parseInt((2*i-2)/jumlah_garis)-tinggi_list[i-1]/2*Math.sin(radian)));
+						ctx.lineWidth = 5;
+						ctx.strokeStyle = "white";
+						ctx.stroke();
+                        ctx.fillText(i,parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))),parseInt(165+180*parseInt((2*i-2)/jumlah_garis)));
+                        // ctx.fill();
+                    }
+                    if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+                    }
+				} else if (e1_bentuk.index == 3 || e1_bentuk.index == 4) {
+					if (level2.index == 0) width = 450;
+					else if (level2.index == 1) width = 600;
+					else if (level2.index == 2) width = 750;
+					else width = 750;
+					soal_teks = `
+					<canvas id="myCanvas" width="${width}" height="360" style="background-color:#202020; border:1px solid gray;">
+					Sorry, your browser does not support canvas.
+					</canvas><br><br>
+					`;
+					bentuk_index = 0*parseInt(3*Math.random());
+					if (bentuk_index == 0) nama_bentuk = 'Persegi';
+					else if (bentuk_index == 1) nama_bentuk = 'Lingkaran';
+					else nama_bentuk = 'Segitiga';
+                    if (e1_bentuk.index == 3) soal_teks += `${nama_bentuk} yang ukurannya berbeda sendiri terletak di nomor ...`;
+					else soal_teks += `${nama_bentuk} terbesar terletak di nomor ...`;
+                    document.getElementById('soal').innerHTML = soal_teks;
+                    const canvas = document.getElementById("myCanvas");
+                    const ctx = canvas.getContext("2d");
+                    ctx.beginPath();
+                    tinggi_list = [];
+                    if (level2.index == 0) {
+                        jumlah_garis = 6;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+							if (e1_bentuk.index == 3) {
+								if (i == 1) tinggi = Math.floor(40 + 70 * Math.random());
+								else if (i == jumlah_garis) tinggi += Math.floor(15 + 10 * Math.random());
+							} else {
+								if (i == 1) tinggi = Math.floor(40 + 10 * Math.random());
+								else tinggi += Math.floor(10 + 5 * Math.random());
+							}
+							tinggi_list.push(tinggi);
+                        }
+                        console.log(tinggi_list);
+                    } else if (level2.index == 1) {
+                        jumlah_garis = 8;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+							if (e1_bentuk.index == 3) {
+								if (i == 1) tinggi = Math.floor(40 + 70 * Math.random());
+								else if (i == jumlah_garis) tinggi += Math.floor(10 + 5 * Math.random());
+							} else {
+								if (i == 1) tinggi = Math.floor(50 + 20 * Math.random());
+								else if (i <= jumlah_garis-1) tinggi += Math.floor(10 * Math.random());
+								else tinggi += Math.floor(5 + 5 * Math.random());
+							}
+							tinggi_list.push(tinggi);
+                        }
+                    } else if (level2.index == 2) {
+                        jumlah_garis = 10;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+							if (e1_bentuk.index == 3) {
+								if (i == 1) tinggi = Math.floor(40 + 70 * Math.random());
+								else if (i == jumlah_garis) tinggi += Math.floor(5 + 5 * Math.random());
+							} else {
+								if (i == 1) tinggi = Math.floor(60 + 20 * Math.random());
+								else if (i <= jumlah_garis-1) tinggi += Math.floor(6 * Math.random());
+								else tinggi += Math.floor(3 + 3 * Math.random());
+							}
+							tinggi_list.push(tinggi);
+                        }
+                    } else {
+                        jumlah_garis = 10;
+                        for (let i = 1; i <= jumlah_garis; i++) {
+							if (e1_bentuk.index == 3) {
+								if (i == 0) tinggi = Math.floor(40 + 70 * Math.random());
+								else if (i == jumlah_garis) tinggi += Math.floor(3 + 3 * Math.random());
+							} else {
+								if (i == 1) tinggi = Math.floor(60 + 20 * Math.random());
+								else if (i <= jumlah_garis-1) tinggi += Math.floor(4 * Math.random());
+								else tinggi += Math.floor(2 + 2 * Math.random());
+							}
+							tinggi_list.push(tinggi);
+                        }
+                    }
+					ctx.font = "24px arial";
+                    tinggi_list = tinggi_list.sort(() => .5 - Math.random());
+                    tinggi_list = tinggi_list.slice(0,jumlah_garis);
+                    console.log(tinggi_list);
+                    hasil = 1+tinggi_list.indexOf(tinggi);
+                    ctx.fillStyle = "#404040";
+                    ctx.fillRect(0, 150, 750, 30);
+					ctx.fillRect(0, 330, 750, 30);
+                    ctx.textAlign = "center";
+					ctx.textBaseline = "middle";
+                    for (let i = 1; i <= jumlah_garis; i++) {
+						ctx.fillStyle = "white";
+						// ctx.moveTo(parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))+tinggi_list[i-1]/2*Math.cos(radian)),parseInt(75+180*parseInt((2*i-2)/jumlah_garis)+tinggi_list[i-1]/2*Math.sin(radian)));
+                        if (bentuk_index == 0) {
+							ctx.fillRect(parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))-tinggi_list[i-1]/2),parseInt(75+180*parseInt((2*i-2)/jumlah_garis)-tinggi_list[i-1]/2), tinggi_list[i-1], tinggi_list[i-1]);
+                        } else if (bentuk_index == 1) {
+						}
+						ctx.fillText(i,parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))),parseInt(165+180*parseInt((2*i-2)/jumlah_garis)));
+                        // ctx.fill();
+                    }
+				} else {
+				}
             }
 			
 			// document.getElementById('soal').innerHTML = soal_teks;
@@ -1369,11 +1546,14 @@
                         <option>Perbandingan Panjang Batang</option>
                         <option>Perbandingan Panjang Garis</option>
                         <option>Perbandingan Panjang Garis 2</option>
+						<option>Perbedaan Ukuran Bentuk</option>
+						<option>Perbandingan Ukuran Bentuk</option>
+						<option>Mengukur Panjang Garis</option>
+						<option>Luas Persegi Panjang</option>
                         <option>Perbandingan Luas Persegi Panjang</option>
-						<option>Perbandingan Sudut</option>
-						<option>Banyak Objek</option>
+						<option>Besar Sudut</option>
+						<option>Perbandingan Besar Sudut</option>
 						<option>Perbandingan Banyak Objek</option>
-						<option>Perbedaan Bentuk</option>
                     `;
                 }
             } else if (e1.index == 3) {
