--- a/projects/Tes Kognitif dan Visual.html
+++ b/projects/Tes Kognitif dan Visual.html
@@ -15,15 +15,59 @@
     body {
 	    background-color: #a0e0ff;
 	}
+	#myVideo {
+		position: fixed;
+		left: 0;
+		top: 0;
+		/* min-width: 100%; 
+		min-height: 100%; */
+		max-width: 1920px;
+		color: rgba(255,255,255,0.5);
+		z-index: -4;
+	}
+	#background-index3 {
+		background-size: cover;
+		width: 100%;
+	    display: none;
+	}
+	#background-index4 {
+		background-size: cover;
+		width: 100%;
+	    display: none;
+	}
 	@container root style(--darkmode: 1) {
 	    body {
-		    background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url("images/5570834.jpg");background-repeat: no-repeat;
+		    /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url("images/5570834.jpg"); */
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: 100%;
 		}
+	}
+	@keyframes blinkFadeEffect {
+		0%, 100% {opacity: 0.75;}
+		50% {opacity: 0.95;}
 	}
 </style>
 <body>
+	<div id="background-index3">
+		<video autoplay muted loop id="myVideo" style="filter:invert(100%);>
+			<!-- <source src="rain.mp4" type="video/mp4">
+			<source src="C:\Users\Lenovo\Downloads\Video\vecteezy_texture-stock-background_49474463.mp4" type="video/mp4"> -->
+			<source src="videos/vecteezy_animation-background-grid-black-and-white-looping_8661326.mp4" type="video/mp4">
+			Your browser does not support HTML5 video.
+		</video>
+		<div style="position:fixed; width:100%; height:100%; left:0; top:0; background-color:rgba(0,0,0,1); z-index:-3; animation: blinkFadeEffect 12s linear infinite;"></div>
+		<div style="position:fixed; width:100%; height:100%; left:0; top:0; background-color:rgba(255,255,255,0.15); z-index:-2;"></div>
+	</div>
+	<div id="background-index4">
+		<video autoplay muted loop id="myVideo">
+			<source src="videos/1851190-hd_1920_1080_25fps.mp4" type="video/mp4">
+			Your browser does not support HTML5 video.
+		</video>
+		<div style="position:fixed; width:100%; height:100%; left:0; top:0; background-color:rgba(0,0,0,0.5); z-index:-2;"></div>
+	</div>
     <div id="top-color" style="position:absolute; width:100%; height:80px; left:0; top:0; z-index:-1;"></div>
-    <h1 class="heading">Tes Kognitif dan Visual</h1><br>
+	<h1 class="heading">Tes Kognitif dan Visual</h1><br>
 	<div class="column" style="padding-right:50px;">
         <img src="images/soal-matematika.jpg" style="background-color:white; filter:invert(0%);" width="200">
 	</div>
@@ -240,19 +284,19 @@
 			<option value="consolas">Consolas</option>
 			<option value="roboto mono">Roboto Mono</option>
         </select><br><br>
+		<label>Pilih background:</label><br>
+        <select id="jenis-background" style="width:200px" onchange="settings_check()">
+            <option value="0">Tema terang</option>
+			<option value="1">Tema gelap</option>
+			<option value="2">Foto pemandangan</option>
+			<option value="3">Animasi</option>
+			<option value="4">Video Bumi</option>
+        </select><br><br>
 	    <!-- <label>Dengan soal cerita:</label> -->
 		<!-- <input type="checkbox" id="check" onclick="change()"> -->
 		<!-- <input type="checkbox" id="check" onclick="tampilkan()"> -->
 		<label class="cb-container" style="width:400px;">Dengan ucapan suara
 			<input type="checkbox" id="suara" onclick="settings_check()">
-			<span class="checkmark"></span>
-		</label>
-		<label class="cb-container" style="width:400px; color:gray;">Tampilkan langkah penyelesaian (Coming Soon)
-			<input type="checkbox" id="suara" onclick="settings_check()">
-			<span class="checkmark"></span>
-		</label>
-		<label class="cb-container" style="width:400px;">Terapkan tema gelap
-			<input type="checkbox" id="tema" onclick="settings_check()">
 			<span class="checkmark"></span>
 		</label>
 		<label class="cb-container" style="width:400px;">Pertahankan pengaturan<br>
@@ -309,7 +353,8 @@
 	<!-- <p>Terakhir diupdate: 1 Desember 2025</p> -->
 	<!-- <p>Terakhir diupdate: 24 Desember 2025</p> -->
     <!-- <p>Terakhir diupdate: 14 Januari 2026</p> -->
-	<p>Terakhir diupdate: 23 Januari 2026</p>
+	<!-- <p>Terakhir diupdate: 23 Januari 2026</p> -->
+	<p>Terakhir diupdate: 24 Januari 2026</p>
 	
 	<script>
         // Time
@@ -329,33 +374,29 @@
 
         // change();
         if (check_old) {
-            soal_cerita_check_old = localStorage.getItem("soal-cerita-check");
-            soal_cerita_check_old = soal_cerita_check_old == "true"
-            percobaan_check_old = localStorage.getItem("percobaan-check");
-            percobaan_check_old = percobaan_check_old == "true"
+			// percobaan_check_old = localStorage.getItem("percobaan-check");
+            // percobaan_check_old = percobaan_check_old == "true"
+			// theme_check_old = localStorage.getItem("tema-check");
+			percobaan_check_old = localStorage.getItem("percobaan-check") == "true";
             font_index = localStorage.getItem("font-index");
-			suara_check_old = localStorage.getItem("suara-check");
-            suara_check_old = suara_check_old == "true"
-            theme_check_old = localStorage.getItem("tema-check");
-            theme_check_old = theme_check_old == "true"
+			background_index_old = localStorage.getItem("background-index");
+			suara_check_old = localStorage.getItem("suara-check") == "true";
         } else {
-            soal_cerita_check_old = false;
             percobaan_check_old = false;
             font_index = 0;
+			background_index_old = 0;
 			suara_check_old = false;
-            theme_check_old = false;
-            // clear_all();
         }
         
         document.getElementById("check2").checked = percobaan_check_old;
+		document.getElementById("jenis-background").selectedIndex = background_index_old;
         document.getElementById("jenis-font").selectedIndex = font_index;
 		document.getElementById("suara").checked = suara_check_old;
-        document.getElementById("tema").checked = theme_check_old;
         document.getElementById("settings").checked = check_old;
         settings_check();
         // pilihan(); // On off
         pilihan(true);
-        console.log(100);
+        // console.log(100);
         // console.log(2**100 % 1000)
 
         interval = 200;
@@ -372,10 +413,8 @@
         function settings_check() {
 			// soal_cerita_check = document.getElementById("check").checked;
             percobaan_check = document.getElementById("check2").checked;
-            // console.log(document.getElementById("jenis-font").value);
-            // document.body.style.font
-            // document.getElementsByTagName("button")[0]
-            font_value = document.getElementById("jenis-font").value
+            font_value = document.getElementById("jenis-font").value;
+			background_index = document.getElementById("jenis-background").value;
             document.body.style.fontFamily = font_value;
             const button_font_list = document.querySelectorAll("button");
             for (let i = 0; i < button_font_list.length; i++) button_font_list[i].style.fontFamily = font_value;
@@ -385,7 +424,6 @@
             for (let i = 0; i < select_font_list.length; i++) select_font_list[i].style.fontFamily = font_value;
 
 			suara_check = document.getElementById("suara").checked;
-            theme_check = document.getElementById("tema").checked;
             check = document.getElementById("settings").checked;
             localStorage.setItem("settings-check", check);
             // console.log(theme_check);
@@ -397,15 +435,36 @@
                 // localStorage.setItem("soal-cerita-check", soal_cerita_check);
                 localStorage.setItem("percobaan-check", percobaan_check);
                 jenis_font = document.getElementById("jenis-font");
-                localStorage.setItem("font-index", jenis_font.options[jenis_font.selectedIndex].index);
+                localStorage.setItem("font-index", font_value);
+				jenis_background = document.getElementById("jenis-background");
+                localStorage.setItem("background-index", background_index);
 				localStorage.setItem("suara-check", suara_check);
-                localStorage.setItem("tema-check", theme_check);
             }
-            if (theme_check) {
+			if (background_index == 0) {
+			    document.documentElement.style.setProperty('--darkmode', 0);
+				document.body.style.backgroundImage = "none";
+			} else if (background_index == 1) {
+				document.documentElement.style.setProperty('--darkmode', 1);
+				document.body.style.backgroundImage = "linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url('images/5570834.jpg')";
+			} else if (background_index == 2) {
+				document.documentElement.style.setProperty('--darkmode', 1);
+				document.body.style.backgroundImage = "linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url('images/pexels-souvenirpixels-1516046.jpg')";
+			} else if (background_index == 3) {
+				document.documentElement.style.setProperty('--darkmode', 1);
+				document.body.style.backgroundImage = "none";
+			} else {
+				document.documentElement.style.setProperty('--darkmode', 1);
+				document.body.style.backgroundImage = "none";
+			}
+			if (background_index == 3) document.getElementById('background-index3').style.display = "block";
+			else document.getElementById('background-index3').style.display = "none";
+			if (background_index == 4) document.getElementById('background-index4').style.display = "block";
+			else document.getElementById('background-index4').style.display = "none";
+            /* if (theme_check) {
                 document.documentElement.style.setProperty('--darkmode', 1);
             } else {
                 document.documentElement.style.setProperty('--darkmode', 0);
-            }
+            } */
         }
 		
 		function gcd(a, b) {
