--- a/projects/Tes Kognitif dan Visual.html
+++ b/projects/Tes Kognitif dan Visual.html
@@ -366,7 +366,8 @@
     <!-- <p>Terakhir diupdate: 14 Januari 2026</p> -->
 	<!-- <p>Terakhir diupdate: 23 Januari 2026</p> -->
 	<!-- <p>Terakhir diupdate: 24 Januari 2026</p> -->
-	<p>Terakhir diupdate: 4 Februari 2026</p>
+	<!-- <p>Terakhir diupdate: 4 Februari 2026</p> -->
+	<p>Terakhir diupdate: 11 Februari 2026</p>
 	
 	<script>
         // Time
@@ -974,6 +975,9 @@
 						    ctx.fillRect(3+40*coordinates[i][0], 3+40*coordinates[i][1], 34, 34);
 						}
 					}
+					/* function similar_digit(digit) {
+						if (digit == 0) dpos = [0,
+					} */
 					gambar_angka(Math.floor(a/100),1,1);
 					gambar_angka(Math.floor(a/10)%10,5,1);
 					gambar_angka(a%10,9,1);
@@ -981,6 +985,9 @@
                         for (let i = 1; i <= j_pilihan2; i++) {
                             value_check = true;
                             while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+								// ratusan = parseInt(a/100);
+								// puluhan = parseInt(a/10)%10;
+								// satuan = a%10;
                                 value = Math.floor(a/2+Math.max(a,6)*Math.random());
                                 value_check = false;
                             }
@@ -1506,11 +1513,13 @@
                         for (let i = 1; i <= j_pilihan2; i++) {
                             value_check = true;
                             while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
-                                value = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value = Math.floor(1+jumlah_batang*Math.random());
                                 value_check = false;
                             }
                             pilihan_list.push(value);
                         }
+						pilihan_list.sort(function(a, b){return a - b});
+						random_check = false;
                     }
                 } else if (e1_bentuk.index == 2) {
 					if (level2.index == 0) width = 450;
@@ -1589,11 +1598,13 @@
                         for (let i = 1; i <= j_pilihan2; i++) {
                             value_check = true;
                             while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
-                                value = Math.floor(a/2+Math.max(a,6)*Math.random());
+                                value = Math.floor(1+jumlah_garis*Math.random());
                                 value_check = false;
                             }
                             pilihan_list.push(value);
                         }
+						pilihan_list.sort(function(a, b){return a - b});
+						random_check = false;
                     }
 				} else if (e1_bentuk.index == 3 || e1_bentuk.index == 4) {
 					if (level2.index == 0) width = 450;
@@ -1705,6 +1716,18 @@
 						ctx.fillText(i,parseInt(75+150*((i-1)%parseInt(jumlah_garis/2))),parseInt(165+180*parseInt((2*i-2)/jumlah_garis)));
                         // ctx.fill();
                     }
+					if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value = Math.floor(1+jumlah_garis*Math.random());
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+						pilihan_list.sort(function(a, b){return a - b});
+						random_check = false;
+                    }
 				} else {
 					if (background_index == 0) background_color = 'white'; else background_color = '#202020';
                     soal_teks = `
@@ -1746,6 +1769,18 @@
 					ctx.lineWidth = 5;
 					ctx.strokeStyle = ctx.fillStyle;
 					ctx.stroke();
+					if (tipe2.index == 1) {
+                        for (let i = 1; i <= j_pilihan2; i++) {
+                            value_check = true;
+                            while (value_check || pilihan_list.indexOf(value) > -1 || value == hasil) {
+                                value = Math.floor(line2_length/2+Math.max(line2_length,6)*Math.random());
+                                value_check = false;
+                            }
+                            pilihan_list.push(value);
+                        }
+						pilihan_list.sort(function(a, b){return a - b});
+						random_check = false;
+                    }
 				}
             }
 			
@@ -1798,8 +1833,8 @@
                 if (random_check) {
                     pilihan_list = pilihan_list.sort(() => .5 - Math.random());
                     pilihan_list = pilihan_list.slice(0,j_pilihan2);
-                    pilihan_list[pilihan_index] = hasil;
                 }
+				pilihan_list[pilihan_index] = hasil;
 				
 				// if (pilihan_index == 0) {hasil2 = hasil + ' (A)';}
                 if (pilihan_index == 0) {hasil2 = hasil + '<br><br>A. ' + hasil;}
